remove tryCreateGcCounter